--- a/app/src/main/res/layout/item_advertisement.xml
+++ b/app/src/main/res/layout/item_advertisement.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/shape_card_advertisement"
         android:gravity="center"
         android:orientation="vertical"
@@ -47,8 +47,7 @@
                 android:layout_width="280dp"
                 android:layout_height="160dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/shape_image"
-                android:padding="10dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/sale_car" />
 
         </LinearLayout>
@@ -66,35 +65,36 @@
             android:padding="15dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/tvPrice"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:text="@string/data"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:text="@string/price"
+                android:typeface="serif"
+                android:textStyle="bold|italic"
+                android:textColor="@color/prussian_blue"
+                android:textSize="25sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="10">
 
-                <TextView
+                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="6"
-                    android:text="@string/plate"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:layout_height="30dp"
+                    android:layout_weight="7"
+                    android:src="@drawable/baseline_date_range_24" />
 
                 <TextView
-                    android:id="@+id/tvPlate"
+                    android:id="@+id/tvYear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:text="@string/plate"
+                    android:layout_weight="3"
+                    android:text="@string/year"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
 
@@ -104,22 +104,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="10">
 
-                <TextView
+                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="6"
-                    android:text="@string/mileage"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:layout_height="30dp"
+                    android:layout_weight="7"
+                    android:src="@drawable/baseline_emoji_transportation_24" />
 
                 <TextView
                     android:id="@+id/tvMileage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
+                    android:layout_weight="3"
                     android:text="@string/mileage"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
@@ -136,19 +135,22 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="6"
                     android:text="@string/functioning"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/tvFunctioning"
+                <RatingBar
+                    android:id="@+id/rbFunctioning"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="4"
-                    android:text="@string/functioning"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:isIndicator="true"
+                    android:numStars="10"
+                    android:theme="@style/RatingBar" />
 
             </LinearLayout>
 
@@ -167,14 +169,16 @@
                     android:textColor="@color/white"
                     android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/tvEsthetic"
+                <RatingBar
+                    android:id="@+id/rbEsthetic"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="4"
-                    android:text="@string/esthetic"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:isIndicator="true"
+                    android:numStars="10"
+                    android:theme="@style/RatingBar" />
 
             </LinearLayout>
 
