--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.Salecar" parent="Base.Theme.Salecar" />
+
+    <style name="RatingBar" parent="Base.Theme.Salecar">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/prussian_blue</item>
+    </style>
 </resources>
