--- a/app/src/main/res/layout/activity_advertisements.xml
+++ b/app/src/main/res/layout/activity_advertisements.xml
@@ -63,7 +63,7 @@
         app:layout_constraintVertical_bias="1.0">
 
         <ImageButton
-            android:id="@+id/ivHome"
+            android:id="@+id/ibHome"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="5dp"
@@ -73,7 +73,7 @@
             android:src="@drawable/baseline_home_24" />
 
         <ImageButton
-            android:id="@+id/ivMessage"
+            android:id="@+id/ibMessage"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="5dp"
@@ -83,7 +83,7 @@
             android:src="@drawable/baseline_message_24" />
 
         <ImageButton
-            android:id="@+id/ivProfile"
+            android:id="@+id/ibProfile"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="5dp"
